--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -69,4 +69,29 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#FF9800"
         android:text="Register" />
+
+    <LinearLayout
+        android:layout_width="382dp"
+        android:layout_height="238dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Already have an account?" />
+
+        <Button
+            android:id="@+id/loginButton"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="195dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FF9800"
+            android:text="Login"
+            android:textColor="#FF9800" />
+
+    </LinearLayout>
+
+
 </LinearLayout>
