--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -9,30 +9,43 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:background="#B3FFFFFF"
-        android:padding="8dp">
+        android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/btnDistance"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Show Distance"
-            android:backgroundTint="@color/blue"
-            android:textColor="@android:color/white"
-            android:layout_marginEnd="8dp" />
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="56dp"
+            android:background="#B3FFFFFF"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="8dp"> <!-- Adjust this value to match the height of the BottomNavigationView -->
 
-        <Button
-            android:id="@+id/btnDirections"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Get Directions"
-            android:backgroundTint="@color/light_blue"
-            android:textColor="@android:color/white" />
-    </LinearLayout>
+            <Button
+                android:id="@+id/btnDistance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:backgroundTint="@color/blue"
+                android:text="Show Distance"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/btnDirections"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_blue"
+                android:text="Get Directions"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+    </FrameLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
+
