--- a/app/src/main/res/layout/item_observation.xml
+++ b/app/src/main/res/layout/item_observation.xml
@@ -2,15 +2,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp"
-    android:background="?attr/selectableItemBackground">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/speciesNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
         android:text="Species Name" />
 
     <TextView
@@ -36,4 +33,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Notes" />
+
 </LinearLayout>
+
